# Continuous

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
editor/: CMakeLists.txt
editor/src/: EditorApp.cpp  EditorApp.h  ImGuiBackend.cpp  ImGuiBackend.h  Inspector.cpp  Inspector.h  main.cpp
editor/src/panels/: AssetBrowser.cpp  AssetBrowser.h  Console.cpp  Console.h  Hierarchy.cpp  Hierarchy.h  Profiler.cpp  Profiler.h  Viewport.cpp  Viewport.h
engine/: CMakeLists.txt
engine/include/continuous/: Engine.h  HotReload.h
engine/include/continuous/asset/: AssetManager.h  AssetTypes.h
engine/include/continuous/audio/: Audio.h
engine/include/continuous/core/: Allocator.h  Assert.h  IO.h  Jobs.h  Log.h  Macros.h  String.h  Time.h  Types.h
engine/include/continuous/ecs/: Archetype.h  Entity.h  World.h
engine/include/continuous/gfx/: DebugDraw.h  Device.h  IBL.h  Material.h  Mesh.h  PostProcess.h  Renderer.h  ResourceCache.h  Resources.h  ShaderCompiler.h  ShadowAtlas.h  SwapChain.h  Texture.h
engine/include/continuous/math/: Math.h  MathReflect.h
engine/include/continuous/net/: Net.h
engine/include/continuous/physics/: Physics.h
engine/include/continuous/platform/: Input.h  Window.h
engine/include/continuous/reflect/: Reflect.h
engine/include/continuous/scene/: Components.h  Scene.h
engine/include/continuous/serialize/: Serialize.h
engine/include/continuous/ui/: UI.h
engine/shaders/: Common.hlsli  DebugDraw.hlsl  IBL.hlsl  PBR.hlsl  PostProcess.hlsl  Shadow.hlsl  Skybox.hlsl  UI.hlsl
engine/src/: Engine.cpp  HotReload.cpp
engine/src/asset/: AssetManager.cpp  AudioImport.cpp  MeshImport.cpp  TextureImport.cpp
engine/src/audio/: Audio.cpp
engine/src/core/: Allocator.cpp  Assert.cpp  IO.cpp  Jobs.cpp  Log.cpp  Time.cpp
engine/src/ecs/: Archetype.cpp  World.cpp
engine/src/gfx/: DebugDraw.cpp  Device.cpp  IBL.cpp  Material.cpp  Mesh.cpp  PostProcess.cpp  Renderer.cpp  ResourceCache.cpp  Resources.cpp  ShaderCompiler.cpp  ShadowAtlas.cpp  SwapChain.cpp  Texture.cpp
engine/src/math/: MathReflect.cpp
engine/src/net/: Net.cpp
engine/src/physics/: Physics.cpp
engine/src/platform/: Input.cpp  Window.cpp
engine/src/reflect/: Reflect.cpp
engine/src/scene/: Components.cpp  Scene.cpp
engine/src/serialize/: Serialize.cpp
engine/src/ui/: UI.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
sandbox/: CMakeLists.txt
sandbox/scenes/: sandbox.json
sandbox/src/: AudioBlip.cpp  AudioBlip.h  Gameplay.cpp  NetDemoController.cpp  NetDemoController.h  PlayerController.cpp  PlayerController.h  Spinner.cpp  Spinner.h
scripts/: bootstrap.bat  new-project.bat  package.bat
tools/cooker/: CMakeLists.txt  main.cpp
